k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nestarr
  labels:
    app.kubernetes.io/name: nestarr
    app.kubernetes.io/component: namespace
